react to light areas

--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -18,6 +18,8 @@
             font-family: verdana;
             font-size: 40px;
             color:rgba(255, 255, 255, 0.829);
+            z-index: -1;
+            position: relative;
         }
         #video-container {
             position: relative;
