react to light areas

--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(17, 0, 255, 0.829);
+            background-color: rgba(9, 255, 0, 0.829);
         }
 
         p {
@@ -16,7 +16,8 @@
 
         #label-container {
             font-family: verdana;
-            font-size: 20px;
+            font-size: 10px;
+            left: 100px;
             color:rgba(255, 255, 255, 0.829);
             z-index: 1;
             position: relative;
