react to light areas

--- a/kladding/aitest3.html
+++ b/kladding/aitest3.html
@@ -509,7 +509,12 @@ init();
   console.log("page is fully loaded");
 };
     // the link to your model provided by Teachable Machine export panel
-    const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
+   // const URL = 'https://teachablemachine.withgoogle.com/models/MRj0P0XeR/';
+
+   const URL = 'https://teachablemachine.withgoogle.com/models/UsGnRu7Ed/';
+
+   
+
 
     let model, webcam, labelContainer, maxPredictions;
 
