react to light areas

--- a/matrix.html
+++ b/matrix.html
@@ -102,9 +102,9 @@
 // gjøre dronen bedre
 // fikse gain-algoritmen
 // søke stipender
-// sende mail til oslo kommune
+// sende mail til oslo kommune v
 // bruke ai til noe
-//fikse Aien igjen         
+//fikse Aien igjen         v
 // tid-parameter
 
         const pixelSize = 32;
@@ -551,7 +551,7 @@ console.log(`Den høyeste verdien er i ${highestCell} med en verdi på ${maxValu
             envelope: {
                 attack: 0.1,
                 decay: 0.2,
-                sustain: 1.0,
+                sustain: 0.5,
                 release: 0.2
             }
         }).connect(gainNode);
