changing tonality function

--- a/son4.html
+++ b/son4.html
@@ -178,13 +178,12 @@
         const autoWah = new Tone.AutoWah(50, 6, -30).connect(gainNode);
         const vibrato = new Tone.Vibrato().connect(gainNode);
         const freeverb = new Tone.Freeverb().connect(gainNode);
-        gainNode.gain.value = 0;
+        gainNode.gain.value = 0.1;
 
         let drone = new Tone.Synth().toDestination();
 
         const synth2 = new Tone.MonoSynth({
-
-            frequency : currentNote ,
+            
             oscillator: {
                 type: "square"
             },
@@ -255,7 +254,7 @@
 
         document.addEventListener('keydown', (event) => {
             if (event.key.toLowerCase() === 'd') {
-                gainNode.gain.value = 0.1;
+                synth2.triggerAttack(currentNote);
             }
         });
 
