changing tonality function

--- a/son4.html
+++ b/son4.html
@@ -253,7 +253,7 @@
 
         document.addEventListener('keydown', (event) => {
             if (event.key.toLowerCase() === 'd') {
-                synth2.triggerAttackRelease(currentNote);
+                synth2.triggerAttackRelease(currentNote, 0.5);
             }
         });
 
