--- a/son4.html
+++ b/son4.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(211, 4, 4);
+            background-color: rgb(211, 4, 107);
         }
         #video-container {
             position: relative;
@@ -451,6 +451,7 @@
             let interval = 500; 
             clearInterval(timerId);
             timerId = setInterval(updateGrid, interval);
+            synth.envelope.release = 0.9;
             }
         });
 
