--- a/son4.html
+++ b/son4.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(21, 4, 59);
+            background-color: rgb(66, 4, 211);
         }
         #video-container {
             position: relative;
@@ -256,7 +256,13 @@
             }
         });
 
-
+        document.addEventListener('keydown', (event) => {
+            if (event.key.toLowerCase() === 'd') {
+                const noteIndex = random.currentScale;
+                const note = currentScale[noteIndex];
+                synth2.triggerAttackRelease(note, 0.5);
+            }
+        });
 
 
         const noteIndex = (i) % currentScale.length;
@@ -553,14 +559,6 @@
             synth.cellX = i;
             synth.cellY = j;
             activeSynths.push(synth);
-
-            document.addEventListener('keydown', (event) => {
-            if (event.key.toLowerCase() === 'd') {
-                const noteIndex = (i) % currentScale.length;
-                const note = currentScale[noteIndex];
-                synth2.triggerAttack(note, 0.5);
-            }
-        });
         }
     </script>
 </body>
