changing tonality function

--- a/son4.html
+++ b/son4.html
@@ -295,7 +295,7 @@
                 console.log(lowerOctaveValue);
 
 
-                synth2.triggerAttackRelease(lowerOctaveValue);
+                synth2.triggerAttackRelease(lowerOctaveValue, 0.5);
             }
         });
 
