changing tonality function

--- a/lys2.html
+++ b/lys2.html
@@ -111,20 +111,15 @@
                             
                             averageBrightness += (imageData[index] + imageData[index + 1] + imageData[index + 2]) / 3;
 
-                            const r = imageData[index];
-                            const g = imageData[index + 1];
-                            const b = imageData[index + 2];
 
                         }
                     }
                     averageBrightness /= (pixelSize * pixelSize);
 
-
-
-                    console.log("rød: ", r);
-                    console.log("grønn: ", g);
-                    console.log("blå: ", b);
                     console.log(averageBrightness)
+
+
+                    
 
 
                     if ((averageBrightness > threshold) && (averageBrightness < threshold2)){
@@ -500,6 +495,28 @@
         }
 
         function updateGrid() {
+
+            if (averageBrightness > 100) {
+
+// Velg en tilfeldig indeks
+let randomIndex = Math.floor(Math.random() * currentScale.length);
+
+// Hent den tilfeldige verdien fra listen
+let randomValue = currentScale[randomIndex];
+
+
+// Splitt noteverdien i bokstavdelen og oktavnummeret
+let note = randomValue.slice(0, -1);  // Henter alt unntatt det siste tegnet
+let octave = parseInt(randomValue.slice(-1));  // Henter siste tegnet og gjør det om til et tall
+
+// Reduser oktaven med 1
+let lowerOctaveValue = note + (octave - 2);
+
+console.log(lowerOctaveValue);
+
+
+synth2.triggerAttackRelease(lowerOctaveValue, 0.5);
+}
             let newGrid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
             let activeCellCount = 0;
 
