--- a/lys2.html
+++ b/lys2.html
@@ -122,7 +122,7 @@
                     }
                     averageBrightness /= (pixelSize * pixelSize);
 
-                    console.log(averageBrightness)
+                    //console.log(averageBrightness)
 
 
                     
@@ -168,6 +168,8 @@
 
         const rows = 15;
         const cols = 20;
+        const rows2 = 30;
+        const cols3 = 40;
         let interval = 500;
         let interval2 = 1000;
         let isPlaying = false;
@@ -176,6 +178,7 @@
         let activeSynths = [];
         let availableSynths = []
         let grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
+        let grid2 = new Array(rows2).fill(null).map(() => new Array(cols2).fill(0));
         // first set of pentatonic scales
         let pentatonicScale = ['A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5'];
         let pentatonicScale2 = ['B2', 'D3', 'E3', 'F#3', 'A3', 'B3', 'D4', 'E4', 'F#4', 'A4', 'B4', 'D5', 'E5', 'F#5', 'A5'];
@@ -594,29 +597,29 @@
         function updateGrid2() {
 
 
-let newGrid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
+let newGrid = new Array(rows2).fill(null).map(() => new Array(cols2).fill(0));
 let activeCellCount = 0;
 
-for (let i = 0; i < rows; i++) {
-    for (let j = 0; j < cols; j++) {
+for (let i = 0; i < rows2; i++) {
+    for (let j = 0; j < cols2; j++) {
         let neighbors = 0;
         for (let x = -1; x <= 1; x++) {
             for (let y = -1; y <= 1; y++) {
-                if (i + x >= 0 && i + x < rows && j + y >= 0 && j + y < cols) {
-                    neighbors += grid[i + x][j + y];
+                if (i + x >= 0 && i + x < rows2 && j + y >= 0 && j + y < cols2) {
+                    neighbors += grid2[i + x][j + y];
                 }
             }
         }
-        neighbors -= grid[i][j];
+        neighbors -= grid2[i][j];
 
-        if (grid[i][j] === 1 && (neighbors < 2 || neighbors > 3)) {
+        if (grid2[i][j] === 1 && (neighbors < 2 || neighbors > 3)) {
             newGrid[i][j] = 0;
             const synthIndex = activeSynths.findIndex(s => s.cellX === i && s.cellY === j);
             if (synthIndex !== -1) {
                 const synth = activeSynths.splice(synthIndex, 1)[0];
                 availableSynths.push(synth);
             }
-        } else if (grid[i][j] === 0 && neighbors === 3) {
+        } else if (grid2[i][j] === 0 && neighbors === 3) {
             newGrid[i][j] = 1;
             playNote(i, j);
         } else {
@@ -633,14 +636,14 @@ const cells = document.querySelectorAll('.cell');
 newGrid.forEach((row, i) => {
     row.forEach((cell, j) => {
         if (cell === 1) {
-            cells[i * cols + j].classList.add('alive2');
+            cells[i * cols2 + j].classList.add('alive2');
         } else {
-            cells[i * cols + j].classList.remove('alive2');
+            cells[i * cols2 + j].classList.remove('alive2');
         }
     });
 });
 
-grid = newGrid;
+grid2 = newGrid;
 
 if (activeCellCount > 30) {
     currentScale = pentatonicScale2;
@@ -666,7 +669,32 @@ const noteIndex = (i) % currentScale.length;
 const note = currentScale[noteIndex];
 const gain = ((j / cols) / 2);
 
-synth.triggerAttackRelease(note, '8n', undefined, gain);
+
+
+console.log(averageBrightness)
+if (averageBrightness > 100) {
+
+// Velg en tilfeldig indeks
+let randomIndex = Math.floor(Math.random() * currentScale.length);
+
+// Hent den tilfeldige verdien fra listen
+let randomValue = currentScale[randomIndex];
+
+
+// Splitt noteverdien i bokstavdelen og oktavnummeret
+let note = randomValue.slice(0, -1);  // Henter alt unntatt det siste tegnet
+let octave = parseInt(randomValue.slice(-1));  // Henter siste tegnet og gjør det om til et tall
+
+// Reduser oktaven med 1
+let lowerOctaveValue = note + (octave - 2);
+
+console.log(lowerOctaveValue);
+
+
+synth.triggerAttackRelease(lowerOctaveValue, 0.5);
+}
+
+
 
 
 synth.cellX = i;
