changing tonality function

--- a/matrix.html
+++ b/matrix.html
@@ -483,7 +483,7 @@
          // som avdekker hvilken kvadrant som har flest aktive celler, og da velger vi skala utifra den som har
          // mest celler.
 
-
+console.log(grid[i][j]);
          for (let i = 0; i < 7; i++) {
             for (let j = 0; j < 9; j++) {
                 let content = grid[i][j];
